--- a/package.json
+++ b/package.json
@@ -32,5 +32,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.3",
+    "jest": "^24.9.0",
+    "react-test-renderer": "^16.13.1"
   }
 }
